--- a/JavaScript.html
+++ b/JavaScript.html
@@ -26,11 +26,13 @@
                 <div class="FAQ-message">
                     <div class="msg-content">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
-                    adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                        adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..
                     </div>
                 </div>
             </div>
@@ -39,41 +41,53 @@
                 <div class="FAQ-title">Frequently Asked Question 2 ??
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
-                <div class="FAQ-message"><div class="msg-content">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Itaque eos tempore
-                sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                aliquid distinctio ex veritatis neque voluptate! Omnis..
-                </div></div>
+                <div class="FAQ-message">
+                    <div class="msg-content">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                        adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..
+                    </div>
+                </div>
             </div>
 
             <div class="FAQ">
                 <div class="FAQ-title">Frequently Asked Question 3 ??
                     <i class="fa fa-angle-down"></i>
                 </div>
-                <div class="FAQ-message"><div class="msg-content">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Itaque eos tempore
-                sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                aliquid distinctio ex veritatis neque voluptate! Omnis..
-                </div></div>
+                <div class="FAQ-message">
+                    <div class="msg-content">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                        adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..
+                    </div>
+                </div>
             </div>
             <div class="FAQ">
                 <div class="FAQ-title">Frequently Asked Question 4 ??
                     <i class="fa fa-angle-down"></i>
                 </div>
-                <div class="FAQ-message"><div class="msg-content">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
-                adipisicing elit. Itaque eos tempore
-                sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                aliquid distinctio ex veritatis neque voluptate! Omnis..
-                </div></div>
+                <div class="FAQ-message">
+                    <div class="msg-content">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                        adipisicing elit. Itaque eos tempore
+                        sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                        ipsam
+                        aliquid distinctio ex veritatis neque voluptate! Omnis..
+                    </div>
+                </div>
             </div>
         </div>
 
