--- a/jQuery.html
+++ b/jQuery.html
@@ -22,57 +22,65 @@
         <div id="FAQ-section">
 
             <div class="FAQ">
-                <div class="FAQ-title" >Frequently Asked Question 1 ??
+                <div class="FAQ-title">Frequently Asked Question 1 ??
                     <i class="fa-solid fa-angle-down "></i>
                 </div>
                 <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..</div>
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
             </div>
 
             <div class="FAQ">
-                <div class="FAQ-title" >Frequently Asked Question 2 ??
+                <div class="FAQ-title">Frequently Asked Question 2 ??
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
                 <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..</div>
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
             </div>
 
             <div class="FAQ">
-                <div class="FAQ-title" >Frequently Asked Question 3 ??
+                <div class="FAQ-title">Frequently Asked Question 3 ??
                     <i class="fa fa-angle-down"></i>
                 </div>
                 <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..</div>
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
             </div>
             <div class="FAQ">
-                <div class="FAQ-title" >Frequently Asked Question 4 ??
+                <div class="FAQ-title">Frequently Asked Question 4 ??
                     <i class="fa fa-angle-down"></i>
                 </div>
                 <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. Itaque eos tempore
                     sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
-                    aliquid distinctio ex veritatis neque voluptate! Omnis..</div>
+                    aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
             </div>
-            
+
         </div>
 
     </div>
 
     <script>
-            $(".FAQ-title").click(function(){
-                $(this).parent().children(".FAQ-message").slideToggle()
-                $(this).children("i").toggleClass("fa-angle-up")
-            })
+        $(".FAQ-title").click(function () {
+            $(this).parent().children(".FAQ-message").slideToggle()
+            $(this).children("i").toggleClass("fa-angle-up")
+        })
     </script>
 
 </body>
