Accordian complete with jQuery

--- a/jQuery.html
+++ b/jQuery.html
@@ -25,12 +25,16 @@
                 <div class="FAQ-title">Frequently Asked Question 1 ??
                     <i class="fa-solid fa-angle-down "></i>
                 </div>
-                <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                <div class="FAQ-message"><div class="msg-content">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
                     adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
                 </div>
             </div>
 
@@ -38,12 +42,16 @@
                 <div class="FAQ-title">Frequently Asked Question 2 ??
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
-                <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                <div class="FAQ-message"><div class="msg-content">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
                     adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
                 </div>
             </div>
 
@@ -51,24 +59,32 @@
                 <div class="FAQ-title">Frequently Asked Question 3 ??
                     <i class="fa fa-angle-down"></i>
                 </div>
-                <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                <div class="FAQ-message"><div class="msg-content">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
                     adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
                 </div>
             </div>
             <div class="FAQ">
                 <div class="FAQ-title">Frequently Asked Question 4 ??
                     <i class="fa fa-angle-down"></i>
                 </div>
-                <div class="FAQ-message">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                <div class="FAQ-message"><div class="msg-content">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos tempore
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..Lorem, ipsum dolor sit amet consectetur
                     adipisicing elit. Itaque eos tempore
-                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse, ipsam
+                    sequi excepturi, labore odio fuga exercitationem, provident atque doloremque explicabo esse,
+                    ipsam
                     aliquid distinctio ex veritatis neque voluptate! Omnis..
+                </div>
                 </div>
             </div>
 
@@ -77,9 +93,20 @@
     </div>
 
     <script>
-        $(".FAQ-title").click(function () {
-            $(this).parent().children(".FAQ-message").slideToggle()
-            $(this).children("i").toggleClass("fa-angle-up")
+        // $(".FAQ-title").click(function () {
+        //     $(this).parent().children(".FAQ-message").slideToggle()
+        //     $(this).children("i").toggleClass("fa-angle-up")
+        // })
+
+         $(document).ready(function(){
+            $('.FAQ-title').click(function(){
+                if($(this).parent().hasClass('opened')){
+                    $(this).parent().removeClass('opened')
+                }else{
+                    $('.FAQ.opened').removeClass('opened');
+                    $(this).parent().addClass('opened')
+                }
+            })
         })
     </script>
 
